Closed
Bug 1491915
Opened 7 years ago
Closed 7 years ago
Fix the rendering of bullet list after enabling "layout.css.column-span.enabled"
Categories
(Core :: Layout: Generated Content, Lists, and Counters, defect, P3)
Core
Layout: Generated Content, Lists, and Counters
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | fixed |
People
(Reporter: TYLin, Assigned: TYLin)
References
Details
Attachments
(1 file)
The implementation in bug 1421105 doesn't render bullet list correctly.
Step to reproduce:
Enable "layout.css.column-span.enabled" and load layout/reftests/bugs/571281-1b.html.
Expected result:
One bullet for the <li> element.
Actual result:
Two bullet for the <li> element.
| Assignee | ||
Comment 1•7 years ago
|
||
Patches in Bug 1486602 have necessary refactoring for this bug.
| Assignee | ||
Comment 2•7 years ago
|
||
The modification to nsLayoutUtils::GetFirstLinePosition() is needed because
we need to get the correct first line position when there's an outside
bullet on ColumnSetWrapperFrame.
The difference between the two newly added tests is "overflow: hidden" on
the columns.
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
Updated•7 years ago
|
Attachment #9012387 -
Attachment description: Bug 1491915 - Fix bullet frame creation for column hierarchy → Bug 1491915 - Fix bullet frame creation for columns.
Pushed by aethanyc@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/c21bf3a5e752
Fix bullet frame creation for columns. r=bzbarsky
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/14113 for changes under testing/web-platform/tests
Comment 5•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Upstream PR merged
You need to log in
before you can comment on or make changes to this bug.
Description
•