Bug 1491915 - Fix bullet frame creation for columns. r=bzbarsky

The modification to nsLayoutUtils::GetFirstLinePosition() is needed because we
need to get the correct first line position from child (i.e. ColumnSet) when
there's an outside bullet on ColumnSetWrapperFrame.

The difference between the two newly added tests is "overflow: hidden" on
the columns.

Differential Revision: https://phabricator.services.mozilla.com/D7009